--- a/estilo.css
+++ b/estilo.css
@@ -4,14 +4,14 @@
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
     color: var(--soft-white);
-    background: var(--black-gray);
+    background: var(--soft-black);
     scroll-behavior: smooth;
 }
 
 :root {
     --soft-black: #0F0F0F;
     --black-gray: #1E1E1E;
-    --soft-white: #EAEAEA; 
+    --soft-white: #EAEAEA;
     --gray: #BDBDBD;
     --purple: #7C3AED;
     --black-blue: #3030b3;
@@ -30,8 +30,8 @@
     width: 100vw;
     justify-content: space-between;
     background: transparent;
-    backdrop-filter:blur(4px) ;
-    
+    backdrop-filter: blur(4px);
+
 }
 
 .name_symbol {
@@ -106,20 +106,75 @@
     padding: 1.25rem 5rem;
 }
 
-.purple {  
-    background: linear-gradient(to right,var(--black-blue), var(--purple));  
+.purple {
+    background: linear-gradient(to right, var(--black-blue), var(--purple));
     -webkit-background-clip: text;
-    background-clip: text; 
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.lobby{
+.lobby {
     font-size: 4rem;
 }
 
-p {
+.paragraph {
     color: var(--gray);
     margin: 1.7rem 0;
 }
 
 
+.start:hover {
+    transform: translateY(-3px) scale(1.03);
+    background: var(--black-blue);
+}
+
+.layout {
+    min-height: 75vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 1.25rem 5rem;
+    gap: 1.5rem;
+}
+
+
+.img_service {
+    width: 8rem;
+    margin: 0.6rem auto;
+    transition: 0.3s ease;
+}
+
+
+.title_service {
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    transition: 0.3s ease;
+}
+
+.about_services {
+    background-color: var(--soft-black);
+    color: var(--gray);
+    border-radius: 2rem;
+    font-size: 1rem;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateY(8px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    padding: 1rem;
+    border: 1px solid var(--glass);
+}
+
+
+.top_service:hover .img_service {
+    transform: translateY(-12px) scale(1.03);
+}
+
+.top_service:hover .title_service {
+    transform: translateY(-12px) scale(1.03);
+}
+
+.top_service:hover .about_services {
+    opacity: 1;
+    transform: translateY(0);
+    box-shadow: var(--black-blue) 6px 2px 16px 0px, var(--purple) -6px -2px 16px 0px;
+}
