--- a/estilo.css
+++ b/estilo.css
@@ -39,7 +39,20 @@
     gap: 1rem;
     background-color: transparent;
     font-weight: 700;
+    position: relative;
 }
+
+.name_symbol::after {
+    content: " ";
+    position: absolute;
+    height: 2px;
+    width: 60%;
+    left: 0;
+    bottom: 0;
+    background: linear-gradient(90deg, var(--gray), var(--purple));
+
+}
+
 
 .name {
     font-size: 1.6rem;
@@ -70,7 +83,7 @@
     height: 2px;
     width: 0;
     position: absolute;
-    bottom: 0;
+    bottom: -3px;
     left: 0;
     background: linear-gradient(90deg, var(--black-blue), var(--gray));
     transition: width 0.5s ease;
@@ -107,7 +120,7 @@
 }
 
 .purple {
-    background: linear-gradient(to right, var(--black-blue), var(--purple));
+    background: linear-gradient(to left, var(--black-blue), var(--purple));
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -122,10 +135,26 @@
     margin: 1.7rem 0;
 }
 
+.start {
+    transition: 0.4s ease-in-out;
+}
 
 .start:hover {
-    transform: translateY(-3px) scale(1.03);
-    background: var(--black-blue);
+    background: linear-gradient(to left, var(--purple), var(--black-blue));
+    background-size: 500% 100%;
+    animation: degrade 1.8s infinite alternate;
+    box-shadow: rgba(85, 84, 84, 0.35) 0px 5px 15px;
+}
+
+@keyframes degrade {
+    0% {
+        background-position-x: 0%;
+    }
+
+    100% {
+        background-position-x: 100%;
+    }
+
 }
 
 .layout {
@@ -148,7 +177,7 @@
 .title_service {
     margin: 0 auto;
     margin-bottom: 1rem;
-    transition: 0.3s ease;
+    transition: 0.3s ease-in-out;
 }
 
 .about_services {
@@ -159,9 +188,10 @@
     font-weight: 700;
     opacity: 0;
     transform: translateY(8px);
-    transition: opacity 0.3s ease, transform 0.3s ease;
+    transition: opacity 0.3s ease, transform 0.3s ease-in-out;
     padding: 1rem;
     border: 1px solid var(--glass);
+
 }
 
 
